RESOLVED FIXED212550
[Cocoa] Transition between encrypted and clear codecs throws error from SourceBuffer.appendBuffer()
https://bugs.webkit.org/show_bug.cgi?id=212550
Summary [Cocoa] Transition between encrypted and clear codecs throws error from Sourc...
Jer Noble
Reported 2020-05-29 15:23:17 PDT
[Cocoa] Transition between encrypted and clear codecs throws error from SourceBuffer.appendBuffer()
Attachments
Patch (6.02 KB, patch)
2020-05-29 15:29 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2020-05-29 15:23:53 PDT
Jer Noble
Comment 2 2020-05-29 15:29:26 PDT
EWS
Comment 3 2020-05-31 11:51:39 PDT
Committed r262364: <https://trac.webkit.org/changeset/262364> All reviewed patches have been landed. Closing bug and clearing flags on attachment 400626 [details].
Note You need to log in before you can comment on or make changes to this bug.