Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm
@@ -413,6 +413,10 @@ private:
         CMFormatDescriptionRef description = [formatDescriptions count] ? (__bridge CMFormatDescriptionRef)[formatDescriptions objectAtIndex:0] : 0;
         if (description) {
             FourCharCode codec = CMFormatDescriptionGetMediaSubType(description);
+            CFStringRef originalFormatKey = PAL::canLoad_CoreMedia_kCMFormatDescriptionExtension_ProtectedContentOriginalFormat() ? PAL::get_CoreMedia_kCMFormatDescriptionExtension_ProtectedContentOriginalFormat() : CFSTR("CommonEncryptionOriginalFormat");
+            CFTypeRef originalFormat = CMFormatDescriptionGetExtension(description, originalFormatKey);
+            if (originalFormat && CFGetTypeID(originalFormat) == CFNumberGetTypeID())
+                CFNumberGetValue((CFNumberRef)originalFormat, kCFNumberLongType, &codec);
             m_codec = AtomString(reinterpret_cast<LChar*>(&codec), 4);
         }
     }
